1.添加prod配置，docker打包(使用zgc+简单调优)